# goit-web-homework-10

./: pyproject.toml
hw10_project/hw10_project/: settings.py
hw10_project/utils/: migration.py
