[tool.poetry]
name = "module-10"
version = "0.1.0"
description = ""
authors = ["AnatoliiBrovko <116496024+AnatoliiBrovko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "module_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
pymongo = "^4.4.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
